# A_Share_investment_Agent

./: .$structure.drawio.bkp  .env.example  .gitignore  LICENSE  README.md  langgraph_multi_agents_investment_analysis_old.ipynb  pyproject.toml  run_with_backend.py
backend/: README.md  __init__.py  dependencies.py  main.py  schemas.py  state.py
backend/models/: __init__.py  api_models.py
backend/routers/: __init__.py  agents.py  analysis.py  api_runs.py  logs.py  runs.py  workflow.py
backend/services/: __init__.py  analysis.py
backend/storage/: base.py  memory.py
backend/utils/: __init__.py  api_utils.py  context_managers.py
reference/: backtester.py  main.py
reference/agents/: fundamentals.py  market_data.py  portfolio_manager.py  risk_manager.py  sentiment.py  state.py  technicals.py  valuation.py
reference/data/: sentiment_cache.json
reference/tools/: api.py  generate_mock_data.py  news_crawler.py  openrouter_config.py
src/: backtester.py  main.py
src/agents/: __init__.py  debate_room.py  fundamentals.py  macro_analyst.py  macro_news_agent.py  market_data.py  portfolio_manager.py  researcher_bear.py  researcher_bull.py  risk_manager.py  sentiment.py  state.py  technicals.py  valuation.py
src/crawler/: search.py
src/data/: macro_analysis_cache.json  macro_summary.json  sentiment_cache.json
src/tools/: api.py  data_analyzer.py  news_crawler.py  openrouter_config.py  test.py  test_backtest.py  test_gemini.py  test_news_crawler.py
src/utils/: api_utils.py  llm_clients.py  llm_interaction_logger.py  logging_config.py  output_logger.py  (+2 more)
(+6 files in other folders)
